assets/css/app.css
/* ... */
body, input, submit, textarea {
  font-family: "MuseoSans-300", arial, sans-serif;
}

img {
  border: 0;
  /* 1 */
  -ms-interpolation-mode: bicubic;
  /* 2 */
}

a {
  text-decoration: none;
}


fieldset{
  border: 0px;
}

::selection {
  background: #55a2f7; /* Safari */
  }
::-moz-selection {
  background: #55a2f7; /* Firefox */
}


.site-page a {
    color: #FFFFFF;
}

a:hover,
a:active {
  outline: 0;
}


.site-page {
	background: #4175c6;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	color: white;
  background-attachment: scroll;
    background-clip: border-box;
    background-color: #4175c6;
    background-image: none;
    background-origin: padding-box;
    background-position: 0 0;
    background-repeat: repeat;
    background-size: cover;
    color: #FFFFFF;
}



.blur {
	min-width: 100%;
	min-height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	z-index: -2;
	opacity: 0.7;
}

.wrapper {
	margin: 0 auto;
	max-width: 790px;
	padding-bottom: 10px;
}

.site-header {
  margin: 54px 0 30px;
  border-bottom: solid 1px white;
  padding-bottom: 15px
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 
}

.site-header ul.menu{
  padding-top: 8px;
  vertical-align: left;
}

.site-header ul.menu li{
  font-size: 2em;
  display: inline;
  list-style-type: none;
  padding-right: 20px;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}

.site-header ul.menu li.selected{
  text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.7);  
}

.site-header a{
  -webkit-transform: translateZ(0);
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -ms-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;

}

.site-header a:hover{
  opacity: 0.5;
}

.site-header a:focus{
  outline: none;
}



#search-form{
  width: 180px;
  margin: auto;
  display: none;
}

article#about #search-form{
  margin-bottom: 20px;
}

#search-form #search-field{
  color: rgba(255,255,255, 0.9);
  background: transparent;
  border: solid 1px rgba(71, 71, 71, 0.25);
  border-radius: 20px;
  font-size: 14px;
  padding: 4px 15px;
  outline: none;
  -webkit-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
  -moz-box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
  box-shadow: inset 0px 0px 20px rgba(0, 0, 0, .3), 0px 1px 0px rgba(255, 255, 255, 0.1);
}

.menu #search-button{
  font-size: 18px;
}


.site-page .site-header .site-logo {
  float: left;
  width: 470px;
  height: 31px;
  display: block;
  font-size: 3.0em;
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}


.site-page article.blog header {
    margin-bottom: 25px;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}

site-page article.blog header h1{
    margin-bottom: 0px;
}

.site-page article.blog header ul{
  padding: 0px
}

.site-page article.blog header ul li {
    margin: 0;
    padding: 0;
}

.site-page article.blog header h1{
  font-size: 2.4em;
  margin-bottom: 0px;
}

.site-page article.blog .content h2{
  font-size: 1.4em;
  margin-bottom: 0px;
}


.site-page article.blog header a:hover{
    opacity: 0.5;
}

.site-page article.blog header a{
  -webkit-transition: all 0.2s ease-out 0s;
  -moz-transition: all 0.2s ease-out 0s;
}

.site-page article.blog header time{
  font-size: 1.3em;
}

.site-page article.blog .content a{
  color: black;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -ms-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.site-page article.blog .content a:hover{
  opacity: 0.5;
}

.site-page article.blog .content ul{
  padding-left: 0px;
}

.site-page article.blog .content ul li{
  margin-bottom: 40px;
}


.site-page article.blog .content section ul{
  padding-left: 0px;
}

.site-page article.blog .content section ul li{
  margin-bottom: 0px;
}

.old_posts_nav_link{
  margin-bottom: 10px;
}

.old_posts_nav_link .icon{

}

.old_posts_nav_link .label{
  font-size: 1.8em;
  padding-left: 8px;
}

.content{
  background: white;
  color: black;
  padding: 50px 67px;
  margin-bottom: 25px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  position: relative;
  min-height: 153px;
  word-wrap: break-word;
  font-size: 1.6em;
  line-height: 1.4em;
  margin-bottom: 1.6em;
  /* -webkit-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
  -moz-box-shadow: 0px 2px 10px rgba(0,0,0, 0.8);
  box-shadow: 0px 2px 10px rgba(0,0,0, 0.8); */
}

.content a{
  color: #4175c6;
}

.content a:hover{
  text-decoration: underline;
}

.content h2 a:hover{
  text-decoration: none;
}

section.post img{
  max-width: 450px;
  margin: 10px auto;
  display: inline-block;
  position: relative;
}

section.post ol{
  list-style-type: decimal;
}

#canvasSource{
  display: none;
}


.login-form{
  width: 250px;
  margin: auto;
}

.login-form p{
  margin: 0px;
}

.login-form fieldset{
  border: 0px;
}

.login-form .text-input {
  width: 200px;
  height: 20px;
  font-size: 1em;
  color: #272822;
  border: 1px solid #CCC;
  -webkit-box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;
  -moz-box-shadow: inset 0 1px 0 #eee,#fff 0 1px 0;
  box-shadow: inset 0 1px 0 #EEE,white 0 1px 0;
  display: inline-block;
  margin: 0;
  outline: none;
  background-color: white;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  padding: 4px;
}
/* ... */

